--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="{%=o.htmlWebpackPlugin.files.favicon%}">
     {% } %}
 
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:400,700,300" rel="stylesheet" type="text/css">
     <script src="{%=o.htmlWebpackPlugin.files.chunks['styles'].entry %}"></script>
     <script src="{%=o.htmlWebpackPlugin.files.chunks['modernizr-bundle'].entry %}"></script>
   </head>
